[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.4",
    "python-telegram-bot>=20.0",
    "telegram>=0.0.1",
    "aiohttp>=3.12.15",
    "web3>=6.0.0",
    "python-dotenv>=1.0.0",
]
